--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (25/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (26/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
@@ -48,17 +48,17 @@ GOV.UK Prototype Kit
         <div class="govuk-!-padding-bottom-6"></div>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=judiciary&">Available tasks - Assign task</a><br>Checked with DS - v3.1.1</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-a?usertype=judiciary&">Available tasks - Assigned to me</a><br>Checked with DS - v3.1.1 - UPDATE CONFIRMATION AS MIRO ABOVE AND ALSO CASE ASSESS PROTOTYPE</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-a?usertype=judiciary&">Available tasks - Assigned to me</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=judiciary&">My tasks - Unassign</a><br>Checked with DS - v3.1.1 </p>
-        <p><a target="_blank" href="/workallocation/pages/lms?usertype=judiciary&">Unassign task - Unassign</a><br>Checked with DS - v3.1.1 - UPDATE CANCEL</p>
+        <p><a target="_blank" href="/workallocation/pages/lms?usertype=judiciary&">Unassign task - Unassign</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=judiciary&">Unassigned task - Unassign</a><br>Checked with DS - v3.1.1</p>
-        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br>Checked with DS - v3.1.1 - UPDATE CANCEL + NEW COPY</p>
-        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br>Checked with DS - v3.1.1 - UPDATE CANCEL</p>
+        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br>Checked with DS - v3.1.1</p>
+        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=judiciary&">My task - Reassigned</a><br>Checked with DS - v3.1.1</p>
 
         <!-- SECTION BREAK -->
 
-        <h2 class="govuk-heading-l">Allocate a specific role from a task (REVIEW WITH EXUI 25/03/2021)</h2>
+        <h2 class="govuk-heading-l">Allocate a specific role from a task (DESIGN READY FROM DAVID - MONDAY 29Th)</h2>
         <div class="xui-alert-link__number">4 </div>
         <div class="govuk-!-padding-bottom-6"></div>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br>Checked with DS - v3.1.1</p>
@@ -91,21 +91,28 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-l">Add a fee-paid judge (IAC)</h2>
         <div class="xui-alert-link__number">6 </div>
         <div class="govuk-!-padding-bottom-6"></div>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=judiciary&">Roles / access - Allocate a role (IAC)</a><br>Checked with DS - v3.1.1 - UPDATE PATTERN</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=judiciary&">Roles / access - Allocate a role (IAC)</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.1.1</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.1.1 - UPDATE AS MIRO </p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.1.1 - UPDATE AS MIRO</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.1.1 </p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC)</a><br>Checked with DS - v3.1.1</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.1.1 - UPDATE as MIRO</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.1.1 - UPDATE PATTERN</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.1.1</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.1.1</p>
 
   <!-- SECTION BREAK -->
 
   <h2 class="govuk-heading-l">Add an exclusion</h2>
   <div class="xui-alert-link__number">7 </div>
   <div class="govuk-!-padding-bottom-6"></div>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access</a><br>Checked with DS - v3.1.1 - UPDATE PATTERN</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=judiciary&">Roles / access - Add an exclusion - Choose a role</a><br>Checked with DS - v3.1.1 - UPDATE AS MIRO</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=judiciary&">Roles / access - Add an exclusion - Who</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-2?usertype=judiciary&">Roles / access - Add an exclusion - Role</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-3?usertype=judiciary&">Roles / access - Add an exclusion - Find person</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-4?usertype=judiciary&">Roles / access - Add an exclusion - Add type</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-5?usertype=judiciary&">Roles / access - Add an exclusion - Describe exclusion</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-6?usertype=judiciary&">Roles / access - Add an exclusion - Check details</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=judiciary&">Roles / access - Add an exclusion - Complete</a><br>Checked with DS - v3.1.1</p>
+<p><a target="_blank" href="/workallocation/pages/wa-mytasks-ex?usertype=judiciary&">My tasks - Excluded self</a><br>Checked with DS - v3.1.1</p>
 
 <!-- SECTION BREAK -->
 
@@ -126,7 +133,7 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=judiciary&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=judiciary&">My access - tab - pending - viewed</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=judiciary&">My access - tab - New case alert - Rejected</a><br>Checked with DS - v3.1.1</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=judiciary&">My access - tab - View rejection details</a><br>Checked with DS - v3.1.1 - ADD BUTTON LINK TO CASE</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=judiciary&">My access - tab - View rejection details</a><br>Checked with DS - v3.1.1 </p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=judiciary&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c?usertype=judiciary&">My access - tab - New case alert - Challenged</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-2018?usertype=judiciary&">My access - tab - case details- Challenged</a><br>Checked with DS - v3.1.1</p>
