--- a/app/views/workallocation/pages/lms.html
+++ b/app/views/workallocation/pages/lms.html
@@ -60,12 +60,7 @@ My work
         href: "wa-mytasks-u"
         }) }}
 
-
-        {{ govukButton({
-        text: 'Cancel',
-        classes: "govuk-button--secondary",
-        href: "/workallocation/pages/wa-mytasks-ao"
-        }) }}
+<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao">Cancel</a></p>
 
 
     </form>
