--- a/app/views/workallocation/pages/reassign-b.html
+++ b/app/views/workallocation/pages/reassign-b.html
@@ -67,14 +67,14 @@ My work
         classes: "govuk-!-margin-right-5",
         href: "wa-mytasks-r"
         }) }}
-
-
+<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao">Cancel</a></p>
+<!--
         {{ govukButton({
         text: 'Cancel',
         classes: "govuk-button--secondary",
         href: "/workallocation/pages/wa-mytasks-ao"
         }) }}
-
+-->
 
     </form>
     {% endblock %}
