--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajha-fpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajha-fpj.html
@@ -16,16 +16,16 @@ Case details
 
 <div class="govuk-form-group">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the judge
+      Find the person
     </label>
   </h2>
   <div id="event-name-hint" class="govuk-hint">
-    Type the name of the judge to select the right person.
+    Type the name of the person and select them.
   </div>
-  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint" value="Judge Goodwin">
+  <input class="govuk-input govuk-!-width-one-half" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint" value="Judge Goodwin (judge.goodwin@example.com)">
 </div>
 <div class="govuk-inset-text govuk-!-width-three-quarters">
-  <strong>The judge you have selected requires specific acces to this case.</strong><br>
+  <strong>The person you have selected requires specific acces to this case.</strong><br>
   On the next screen you will choose how long they will be allocated this role and have access to the case.
 </div>
   <div class="govuk-button-group">
