--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra-de.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra-de.html
@@ -163,12 +163,12 @@ Case details
         </tbody>
     </table>
     <p><a href="#" class="govuk-link"></a></p>
-        <h2 class="govuk-heading-m">Conflicts of interest</h2>
+        <h2 class="govuk-heading-m">Exclusions</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
 
             <dd class="govuk-summary-list__value">
-              There are no conflicts of interest on this case.
+              There are no exclusions for this case.
             </dd>
           </div>
         </dl>
