--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi.html
@@ -15,20 +15,20 @@ Case details
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
           <h3 class="govuk-fieldset__heading">
-            Choose which role type the exclusion is for
+            Choose who the exclusion is for
           </h3>
         </legend>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="wa-PA-00467-2017-ajh">
+            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              Judicial
+              Exclude me
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="#">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="wa-PA-00467-2017-coi-2">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Leagal ops
+              Exclude another person
             </label>
           </div>
         </div>
