--- a/app/views/workallocation/pages/wa-myaccess-tcrvd.html
+++ b/app/views/workallocation/pages/wa-myaccess-tcrvd.html
@@ -134,11 +134,11 @@ Insufficient ground for access supplied. <br>Please contact me to discuss furthe
         </div>
       </div>
   <div class="govuk-button-group">
-<!--  {{ govukButton({
-    text: "Re-request access",
-    classes: "govuk-!-margin-right-3"
-  }) }} -->
-
+    {{ govukButton({
+        text: "Re-request access",
+        href: "/workallocation/pages/wa-PA-00467-2017",
+        classes: "govuk-!-margin-right-3"
+      }) }}
 
 
 </div>
