--- a/app/views/workallocation/pages/reassign.html
+++ b/app/views/workallocation/pages/reassign.html
@@ -14,13 +14,13 @@ My work
 </div>
 <div class="govuk-form-group">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the judge
+      Find the person
     </label>
   </h2>
   <div id="event-name-hint" class="govuk-hint">
-    Type the name of the judge to select the right person.
+    Type the name of the person and select them.
   </div>
-  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
+  <input class="govuk-input govuk-!-width-one-half" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
 
 
@@ -31,12 +31,12 @@ My work
         href: "reassign-b"
         }) }}
 
-
-        {{ govukButton({
+<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao">Cancel</a></p>
+      <!--  {{ govukButton({
         text: 'Cancel',
         classes: "govuk-button--secondary",
         href: "/workallocation/pages/wa-mytasks-ao"
-        }) }}
+        }) }} -->
 
 
     </form>
