--- a/app/views/workallocation/pages/wa-PA-00467-2017-arj-fpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arj-fpj.html
@@ -132,7 +132,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
 
@@ -172,12 +172,12 @@ Case details
         </tbody>
     </table>
     <p><a href="#" class="govuk-link"></a></p>
-        <h2 class="govuk-heading-m">Conflicts of interest</h2>
+        <h2 class="govuk-heading-m">Exclusions</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
 
             <dd class="govuk-summary-list__value">
-              There are no conflicts of interest on this case.
+              There are no exclusions for this case.
             </dd>
           </div>
         </dl>
