--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
@@ -8,30 +8,41 @@
 Case details
 {% endblock %}
 {% block beforeContent %}
-<a href="wa-PA-00467-2017-aj-fpj" class="govuk-back-link">Back</a>
+<a href="wa-PA-00467-2017-coi" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
+<h2 class="govuk-heading-l">Add an exclusion</h2>
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
           <h3 class="govuk-fieldset__heading">
-            Choose who to allocate the role to
+            Choose the person's role
           </h3>
         </legend>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
+            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="wa-PA-00467-2017-coi-3">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              Reserve to me
+              Judicial
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="wa-PA-00467-2017-ajha-fpj">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="#">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Allocate to another person
+              Leagal ops
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live-3" name="bob" type="radio" value="#">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+              Admin
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live-4" name="bob" type="radio" value="#">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+              Home Office
             </label>
           </div>
         </div>
@@ -48,7 +59,7 @@ Case details
     href: "/caseaccess/pages/PA-00467-2017-t",
     classes: "govuk-button--secondary"
   }) }} -->
-  <p><a class="govuk-body" href="wa-PA-00467-2017-ar-fpj">Cancel</a></p>
+  <p><a class="govuk-body" href="wa-PA-00467-2017-ar">Cancel</a></p>
 </div>
 </form>
 <script type="text/javascript">
