--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-4.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-4.html
@@ -7,7 +7,7 @@
 Case details
 {% endblock %}
 {% block beforeContent %}
-<a href="/caseaccess/pages/PA-00467-2017-tr-case" class="govuk-back-link">Back</a>
+<a href="wa-PA-00467-2017-coi-3" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 {% set textHtml %}
@@ -18,50 +18,40 @@ Case details
 {% endset -%}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-l">Add an exclusion</h2>
+
+    <div class="govuk-form-group">
+      <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
+          Choose an exclusion type
+        </label>
+      </h2>
 {{ govukRadios({
   idPrefix: "contact",
   name: "contact",
   fieldset: {
     legend: {
-      text: "Reject specific access request",
+      text: "",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--l"
     }
   },
-  hint: {
-    text: "This reason will be sent to the requester. Select one option."
-  },
+
   items: [
   {
-    value: "email",
-    text: "Based on the reasons you have provided, I do not believe it is appropriate for you to gain access to this case"
+    value: "coi",
+    text: "Conflict of interest"
   },
   {
-    value: "phone",
-    text: "You have not supplied enough information, please contact me to discuss further"
-  },
-  {
-    value: "email",
-    text: "You have a conflict of interest with this case"
-  },
-
-    {
- divider: "or"
-},
-    {
-      value: "other",
-      text: "Other",
-      conditional: {
-        html: textHtml
-      }
-    }
+    value: "other",
+    text: "Other"
+  }
   ]
 }) }}
 <div class="govuk-button-group">
 {{ govukButton({
-  text: "Submit",
+  text: "Continue",
   classes: "govuk-!-margin-right-3",
-  href: "/caseaccess/pages/PA-00467-2017-trrc-case"
+  href: "/workallocation/pages/wa-PA-00467-2017-coi-5"
 }) }}
 <!--
 {{ govukButton({
@@ -70,7 +60,7 @@ Case details
   classes: "govuk-button--secondary"
 }) }}
 -->
-<p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p>
+  <p><a class="govuk-body" href="wa-PA-00467-2017-ar">Cancel</a></p>
 </div>
 
 </div>
