--- a/app/views/caseaccess/pages/PA-00321-2018-a.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-a.html
@@ -19,7 +19,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challenged access.<br>This case is located outside your working region. Access to this case is logged for auditing purposes.
+    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -50,7 +50,7 @@ Case details
       </form>
     </div>
 
-  
+
 
   </div>
 
@@ -67,7 +67,7 @@ Case details
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="#">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
@@ -180,8 +180,8 @@ Case details
         <h2 class="govuk-heading-m">Do this next</h2>
 
         <p class="govuk-body">Check the response uploaded by the respondent.</p>
-        <p class="govuk-body">If it complies with the Procedure Rules and Practice Directions, <a href="#" class="govuk-link">direct the appellant to review the Home Office response</a></p>
-        <p class="govuk-body">If it does not comply, direct the respondent to <a href="#" class="govuk-link">amend the appeal response</a></p>
+        <p class="govuk-body">If it complies with the Procedure Rules and Practice Directions, direct the appellant to <a href="#" class="govuk-link">review the Home Office response</a>.</p>
+        <p class="govuk-body">If it does not comply, direct the respondent to <a href="#" class="govuk-link">amend the appeal response</a>.</p>
 
         <br>
          <h2 class="govuk-heading-m">Case details</h2>
