--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -16,19 +16,19 @@ Case details
           autocomplete="off"
           action="PA-00321-2018-request">
       {{ govukPanel({
-        titleText: "Access granted",
-        html: "Case ref:<br><strong>PA/00321/2018</strong>"
+        titleText: "Access successful",
+        html: "Case reference:<br><strong>PA/00321/2018</strong>"
       }) }}
   <!--    <p class="govuk-body">We have sent you a confirmation email.</p>
 -->
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      The case file will be accessible until midnight tonight.</p>
+      You can access this case file until midnight tonight.</p>
       <p class="govuk-body">
-        After access expires you will need to request access again.
+        You’ll need to request access again once this expires.
       </p>
       <p class="govuk-body">
-        All access requests are logged for auditing purposes.
+        Your request will be logged for auditing purposes.
       </p>
       <p><a href="PA-00321-2018-a" class="govuk-link">View case file</a>.
     </div>
