--- a/app/views/caseaccess/pages/PA-00321-2018-request-error.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-error.html
@@ -26,8 +26,8 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challenged access. <br>This case is located outside your working region. Access to this case is logged for auditing purposes.
-  </div>
+    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+</div>
 </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
@@ -35,13 +35,17 @@ Case details
           name: "more-detail",
           id: "more-detail",
           label: {
-            text: "State why you are accessing this case
+            text: "Why do you need to access this case?
+
 ",
             classes: "govuk-label--l",
             isPageHeading: true
           },
           hint: {
-            text: "Access will be granted until midnight tonight. You must provide a Purpose."
+            text: "Select a reason.
+
+You’ll be given access to the case until midnight tonight.
+"
           },
   errorMessage: {
     text: "Enter more detail"
