--- a/app/views/caseaccess/pages/PA-00467-2017-tc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tc.html
@@ -51,7 +51,7 @@ Case details
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="PA-00467-2017-ara">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
