--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -29,7 +29,7 @@ Case details
     }
   },
   hint: {
-    text: "This reason will be sent to the requester. Select one option."
+    text: "Select one reason. This reason will be sent to the person requesting access to the case."
   },
   items: [
     {
