--- a/app/views/caseaccess/pages/PA-00467-2017-tu.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tu.html
@@ -49,7 +49,7 @@ You've unassigned yourself a task.
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
