--- a/app/views/caseaccess/pages/mycases-c.html
+++ b/app/views/caseaccess/pages/mycases-c.html
@@ -38,7 +38,7 @@ My work
                 </li>
                 <li class="hmcts-sub-navigation__item">
                   <a class="hmcts-sub-navigation__link"  href="#">
-                    My access
+                    My case access
                   </a>
                 </li>
               </ul>
