--- a/app/views/caseaccess/pages/PA-00321-2018-request-old.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-old.html
@@ -14,8 +14,8 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challenged access. <br>This case is located outside your working region. Access to this case is logged for auditing purposes.
-  </div>
+    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+    </div>
 </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
