--- a/app/views/caseaccess/pages/PA-00467-2017-a.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-a.html
@@ -58,7 +58,7 @@ Case details
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
