--- a/app/views/caseaccess/pages/PA-00467-2017-ar.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ar.html
@@ -56,7 +56,7 @@ Case details
       </li>
        <li class="govuk-tabs__list-item--selected">
         <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
