--- a/app/views/caseaccess/pages/PA-00467-2017-ara.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ara.html
@@ -13,8 +13,7 @@ Case details
   C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
   </svg>
   <div class="hmcts-banner__message">
-    <span class="hmcts-banner__assistive">information</span>Specific access.<br>
-    You have been granted access until midnight on 14 March 2021.  Access to this case is logged for auditing purposes.
+    <span class="hmcts-banner__assistive">information</span>You have been given specific access to this case until midnight on DD MM YYYY. Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -51,7 +50,7 @@ Case details
       </li>
        <li class="govuk-tabs__list-item--selected">
         <a class="govuk-tabs__tab" href="PA-00467-2017-ara">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
