--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -16,21 +16,19 @@ Case details
           autocomplete="off"
           action="PA-00321-2018-request">
       {{ govukPanel({
-        titleText: "Access requested",
-        html: "Case ref:<br><strong>PA/00467/2017</strong>"
+        titleText: "",
+        html: "Case reference:<br><strong>PA/00467/2017</strong>"
       }) }}
   <!--    <p class="govuk-body">We have sent you a confirmation email.</p>
 -->
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      Your request to access the case file has been sent.</p>
-    <!--  <p class="govuk-body">
-        You will be notified by email when this has been granted.
-      </p> -->
+      Your request to access this case file has been sent.</p>
+
       <p class="govuk-body">
-        All access requests are logged for auiting purposes.
+        Once your request has been authorised, you’ll be able to access the case through <a href="myaccess-p" class="govuk-link">My case access</a>.
       </p>
-      <p>The case file will appear under the <a href="myaccess-p" class="govuk-link">My access</a> tab.
+      <p>Your request will be logged for auditing purposes.
     </div>
   </div>
 {% endblock %}
