--- a/app/views/caseaccess/pages/PA-00467-2017-request-old.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-old.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-Specific access.<br>Access requires manual authorisation. Access to this case is logged for auditing purposes.</div>
+This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.</div>
 </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
