--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Specific access. <br>Access requires manual authorisation. Access to this case is logged for auditing purposes.
+    This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -31,13 +31,13 @@ Case details
       name: "contact",
       fieldset: {
         legend: {
-          text: "Why are you requesting access to this case?",
+          text: "Why do you need to access this case?",
           isPageHeading: true,
           classes: "govuk-fieldset__legend--l"
         }
       },
       hint: {
-        text: "Access requires manual authorisation. Select one option."
+        text: "Select a reason."
       },
       items: [
         {
