--- a/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
@@ -8,96 +8,7 @@
 Case details
 {% endblock %}
 {% block content %}
-<!-- <div class="hmcts-banner hmcts-banner--success">
 
-<svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-<path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
-
-<div class="hmcts-banner__message">
-<span class="hmcts-banner__assistive">Success</span>
-You've assigned yourself a task.
-</div>
-</div> -->
-<!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
-  <div class="" style="display: flex; justify-content: space-between; ">
-    <div> -->
-  <!--    <h1 class="govuk-heading-xl">PA/00467/2017</h1> -->
-  <!--  </div> -->
-  <!--  <div style="display: flex; align-items:right">
-      <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
-      <select class="govuk-select" id="sort" name="sort">
-        <option value="published" selected="">Select action</option>
-        <option value="published">Submit amended application</option>
-        <option value="published">Link respondent</option>
-        <option value="published">Add Note</option>
-        <option value="published">Upload document</option>
-        <option value="updated">Stop representing a client</option>
-      </select>
-      <form name="aspnetForm" method="post" id="aspnetForm" autocomplete="off">
-        <button class="govuk-button govuk-!-margin-left-1" data-module="govuk-button">
-          Go
-        </button>
-      </form>
-    </div>
-  </div>
-  <div class="govuk-tabs" data-module="govuk-tabs">
-    <h2 class="govuk-tabs__title">
-      Contents
-    </h2>
-    <ul class="govuk-tabs__list">
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
-          Tasks
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
-          Roles / access
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
-          Overview
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Appeal
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Appellent
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Documents
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Directions
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week" >
-          Applications
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Case notes
-        </a>
-      </li>
-  <!--    <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Hearing
-        </a>
-      </li> -->
-  <!--  </ul> -->
-  <!--  <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
-      <div > -->
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-l  govuk-!-margin-bottom-2">Review specific access request</h2>
@@ -121,9 +32,9 @@ You've assigned yourself a task.
                 <td class="govuk-table__cell">DD/MM/YYYY</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Purpose for access</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
                 <td class="govuk-table__cell">
-Purpose A          </tr>
+	To view details of the other case linked to the parties/family on my current case.          </tr>
             </tbody>
           </table>
         </div>
@@ -133,7 +44,7 @@ Purpose A          </tr>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
           <h1 class="govuk-fieldset__heading">
-            What would you like to do with this request?
+            What do you want to do with this request?
           </h1>
         </legend>
         <div class="govuk-radios">
