--- a/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
@@ -14,11 +14,9 @@ Case details
                 titleText: "Access approved"
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
-            <!--  <p class="govuk-body">
-                We’ve sent the requester an email informing them they now have access to the case.
-              </p> -->
+
               <p class="govuk-body">
-                Their details will appear under the role and access tab.
+                You can find the details in the ‘Roles and access’ tab.
               </p>
               <div class="govuk-button-group">
               {{ govukButton({
