--- a/app/views/caseaccess/pages/PA-00467-2017-trac.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac.html
@@ -7,100 +7,31 @@
 Case details
 {% endblock %}
 {% block content %}
-<!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
-  <div class="" style="display: flex; justify-content: space-between; ">
-    <div>
-      <h1 class="govuk-heading-xl">PA/00467/2017</h1>
-    </div>
-    <div style="display: flex; align-items:right">
-      <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
-      <select class="govuk-select" id="sort" name="sort">
-        <option value="published" selected="">Select action</option>
-        <option value="published">Submit amended application</option>
-        <option value="published">Link respondent</option>
-        <option value="published">Add Note</option>
-        <option value="published">Upload document</option>
-        <option value="updated">Stop representing a client</option>
-      </select>
-      <form name="aspnetForm" method="post" id="aspnetForm" autocomplete="off">
-        <button class="govuk-button govuk-!-margin-left-1" data-module="govuk-button">
-          Go
-        </button>
-      </form>
-    </div>
-  </div>
-  <div class="govuk-tabs" data-module="govuk-tabs">
-    <h2 class="govuk-tabs__title">
-      Contents
-    </h2>
-        <ul class="govuk-tabs__list">
-          <li class="govuk-tabs__list-item">
-            <a class="govuk-tabs__tab" href="PA-00467-2017-tca">
-              Tasks
-            </a>
-          </li>
-          <li class="govuk-tabs__list-item">
-            <a class="govuk-tabs__tab" href="PA-00467-2017-araa">
-              Roles / access
-            </a>
-          </li>
-          <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-            <a class="govuk-tabs__tab" href="PA-00467-2017-atca">
-              Overview
-            </a>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
-          Appeal
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Appellent
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Documents
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Directions
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week" >
-          Applications
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Case notes
-        </a>
-      </li>
-  <!--    <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Hearing
-        </a>
-      </li> -->
-  <!--  </ul> -->
-    <!-- <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
-      <div > -->
+
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
               {{ govukPanel({
                 titleText: "Access approved"
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
-            <!--  <p class="govuk-body">
-                We’ve sent the requester an email informing them they now have access to the case.
-              </p> -->
+
               <p class="govuk-body">
-                Their details will appear under the role and access tab.
+                You can find the details in the ‘Roles and access’ tab.
               </p>
-              <p class="govuk-body">
-                <a href="\caseaccess\pages\available-tasks-s2b" class="govuk-link">Back to available tasks</a>
-              </p>
+              <div class="govuk-button-group">
+              {{ govukButton({
+                text: "Return to My tasks",
+                href: "mywork",
+                classes: "govuk-!-margin-right-3"
+
+              }) }}
+              <!--
+              {{ govukButton({
+                text: "Cancel and unassign task",
+                href: "/mywork-c",
+                classes: "govuk-button--secondary"
+              }) }} -->
+              <p><a class="govuk-body" href="PA-00467-2017-tca">Return to the Tasks tab for this case</a></p>
             </div>
           </div>
 {% endblock %}
