--- a/app/views/caseaccess/pages/myaccess-tcrr.html
+++ b/app/views/caseaccess/pages/myaccess-tcrr.html
@@ -37,7 +37,7 @@ My work
             </li>
             <li class="hmcts-sub-navigation__item">
               <a class="hmcts-sub-navigation__link" aria-current="page"  href="#">
-                My access
+                My case access
               </a>
             </li>
           </ul>
@@ -68,7 +68,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">No access</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">Review</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">View</a></td>
 
 
                   </tr>
