--- a/app/views/caseaccess/pages/myaccess-tcrvd.html
+++ b/app/views/caseaccess/pages/myaccess-tcrvd.html
@@ -12,92 +12,12 @@ Case details
 {% endblock %}
 {% block content %}
 
-<!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
-  <div class="" style="display: flex; justify-content: space-between; ">
-    <div> -->
-  <!--    <h1 class="govuk-heading-xl">PA/00467/2017</h1> -->
-  <!--  </div> -->
-  <!--  <div style="display: flex; align-items:right">
-      <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
-      <select class="govuk-select" id="sort" name="sort">
-        <option value="published" selected="">Select action</option>
-        <option value="published">Submit amended application</option>
-        <option value="published">Link respondent</option>
-        <option value="published">Add Note</option>
-        <option value="published">Upload document</option>
-        <option value="updated">Stop representing a client</option>
-      </select>
-      <form name="aspnetForm" method="post" id="aspnetForm" autocomplete="off">
-        <button class="govuk-button govuk-!-margin-left-1" data-module="govuk-button">
-          Go
-        </button>
-      </form>
-    </div>
-  </div>
-  <div class="govuk-tabs" data-module="govuk-tabs">
-    <h2 class="govuk-tabs__title">
-      Contents
-    </h2>
-    <ul class="govuk-tabs__list">
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
-          Tasks
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
-          Roles / access
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
-          Overview
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Appeal
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Appellent
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Documents
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Directions
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week" >
-          Applications
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Case notes
-        </a>
-      </li>
-  <!--    <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
-          Hearing
-        </a>
-      </li> -->
-  <!--  </ul> -->
-  <!--  <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
-      <div > -->
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-l  govuk-!-margin-bottom-2"> Review your access request and decision</h1>
+          <h1 class="govuk-heading-l  govuk-!-margin-bottom-2"> Review your case access request and decision </h1>
         <!--    <h2 class="govuk-heading-m">Review your access request and decision</h2> -->
 
-          <p class="govuk-body">Review the outcome of your access request.</p>
+          <p class="govuk-body">Check the details of your case access request.</p>
           <table class="govuk-table">
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
@@ -135,7 +55,7 @@ You have not supplied enough information, please contact me to discuss further. 
       </div>
   <div class="govuk-button-group">
 {{ govukButton({
-    text: "Re-request access",
+    text: "Request access again",
     href: "/caseaccess/pages/PA-00467-2017",
     classes: "govuk-!-margin-right-3"
   }) }}
