--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -77,7 +77,7 @@ My work
                 </tr>
             </tbody>
         </table>
-          <h2 class="govuk-heading-m">My access</h2>
+          <h2 class="govuk-heading-m">My case access</h2>
           <table class="govuk-table ">
               <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
