--- a/app/views/caseaccess/pages/PA-00321-2018-a.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-a.html
@@ -19,7 +19,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+    You have been given challenged access to this case until midnight tonight. Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
