--- a/app/views/caseaccess/pages/PA-00467-2017-atc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-atc.html
@@ -179,7 +179,7 @@ Case details
         <h2 class="govuk-heading-m">Do this next</h2>
 
         <p class="govuk-body">Check the response uploaded by the respondent.</p>
-        <p class="govuk-body">If it complies with the Procedure Rules and Practice Directions, <a href="#" class="govuk-link">direct the appellant to review the Home Office response</a></p>
+        <p class="govuk-body">If it complies with the Procedure Rules and Practice Directions, direct the appellant to <a href="#" class="govuk-link">review the Home Office response</a></p>
         <p class="govuk-body">If it does not comply, direct the respondent to <a href="#" class="govuk-link">amend the appeal response</a></p>
 
         <br>
