--- a/app/views/caseaccess/pages/myaccess-tcr.html
+++ b/app/views/caseaccess/pages/myaccess-tcr.html
@@ -68,7 +68,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>No access</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">Review</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">View</a></td>
 
 
                   </tr>
