--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -16,7 +16,7 @@ Case details
           autocomplete="off"
           action="PA-00321-2018-request">
       {{ govukPanel({
-        titleText: "",
+        titleText: "Request sent",
         html: "Case reference:<br><strong>PA/00467/2017</strong>"
       }) }}
   <!--    <p class="govuk-body">We have sent you a confirmation email.</p>
