--- a/app/views/caseaccess/pages/myaccess-tcrvd.html
+++ b/app/views/caseaccess/pages/myaccess-tcrvd.html
@@ -34,7 +34,7 @@ Case details
                 <td class="govuk-table__cell">DD/MM/YYYY </td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Request for access</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
                 <td class="govuk-table__cell">To view details of the other case linked to the parties/family on my current case.</td>
               </tr>
               <tr class="govuk-table__row">
