--- a/app/views/caseaccess/pages/myaccess-tcrvd.html
+++ b/app/views/caseaccess/pages/myaccess-tcrvd.html
@@ -53,13 +53,13 @@ You have not supplied enough information, please contact me to discuss further. 
           </table>
         </div>
       </div>
-  <div class="govuk-button-group">
+  <div class="govuk-button-group"><!--
 {{ govukButton({
     text: "Request access again",
     href: "/caseaccess/pages/PA-00467-2017",
     classes: "govuk-!-margin-right-3"
   }) }}
-<!-- <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p> -->
+ <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p> -->
 
 
 </div>
