--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -26,7 +26,7 @@ Case details
       Your request to access this case file has been sent.</p>
 
       <p class="govuk-body">
-        Once your request has been authorised, you’ll be able to access the case through <a href="myaccess-p" class="govuk-link">My case access</a>.
+        Once your request has been authorised, you’ll be able to access the case through <a href="myaccess-p" class="govuk-link">My access</a>.
       </p>
       <p>Your request will be logged for auditing purposes.
     </div>
